Aligning the frontend and backend together
